[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Main menu PNG.png" type="Texture" id=1]
[ext_resource path="res://assets/options.png" type="Texture" id=2]
[ext_resource path="res://assets/Rules.png" type="Texture" id=3]
[ext_resource path="res://assets/2playermode.png" type="Texture" id=4]
[ext_resource path="res://assets/1playermode.png" type="Texture" id=5]
[ext_resource path="res://MainMenu.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 120, 18 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( -20, 75 )

[node name="MainMenuPng" type="Sprite" parent="Background"]
position = Vector2( 532, 226 )
texture = ExtResource( 1 )

[node name="Menu option" type="Sprite" parent="."]

[node name="1Playermode" type="Sprite" parent="Menu option"]
position = Vector2( 396, 430 )
texture = ExtResource( 5 )

[node name="Button1" type="Area2D" parent="Menu option/1Playermode"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Menu option/1Playermode/Button1"]
shape = SubResource( 1 )

[node name="2Playermode" type="Sprite" parent="Menu option"]
position = Vector2( 396, 505 )
texture = ExtResource( 4 )

[node name="Button2" type="Area2D" parent="Menu option/2Playermode"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Menu option/2Playermode/Button2"]
shape = SubResource( 1 )

[node name="Rules" type="Sprite" parent="Menu option"]
position = Vector2( 668, 432 )
texture = ExtResource( 3 )

[node name="Button3" type="Area2D" parent="Menu option/Rules"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Menu option/Rules/Button3"]
shape = SubResource( 1 )

[node name="Options" type="Sprite" parent="Menu option"]
position = Vector2( 665, 508 )
texture = ExtResource( 2 )

[node name="Button4" type="Area2D" parent="Menu option/Options"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Menu option/Options/Button4"]
shape = SubResource( 1 )

[connection signal="input_event" from="Menu option/1Playermode/Button1" to="." method="_on_Button1_input_event"]
[connection signal="input_event" from="Menu option/2Playermode/Button2" to="." method="_on_Button2_input_event"]
[connection signal="input_event" from="Menu option/Rules/Button3" to="." method="_on_Button3_input_event"]
[connection signal="input_event" from="Menu option/Options/Button4" to="." method="_on_Button4_input_event"]
